# csv-scope

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
csv_scope/: __init__.py  cli.py  profiler.py  renderers.py
docs/: OUTPUT.md  USAGE.md
examples/: expectations.json  failing-expectations.json  sample.csv
tests/: test_profiler.py
