[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "csv-scope"
version = "0.2.0"
description = "A zero-dependency CSV data quality profiler and CI gate."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "csv-scope contributors" }]
keywords = ["csv", "data-quality", "profiling", "cli", "etl", "ci"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Utilities",
]

[project.scripts]
csv-scope = "csv_scope.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["csv_scope*"]
